--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
   "license": "MIT",
   "keywords": [],
   "scripts": {
+    "master": "node -r source-map-support/register -r dotenv/config build/main/master/master.js",
+    "start": "node -r source-map-support/register -r dotenv/config build/main/server/index.js",
     "build": "run-p build:*",
     "build:main": "tsc -p tsconfig.json",
     "build:module": "tsc -p tsconfig.module.json",
@@ -41,29 +43,40 @@
     "node": ">=10"
   },
   "dependencies": {
-    "@bitauth/libauth": "^1.17.1"
+    "@bitauth/libauth": "^1.17.1",
+    "blessed": "^0.1.81",
+    "dotenv": "^9.0.0",
+    "express": "^4.17.1",
+    "inquirer": "^8.0.0",
+    "listr": "^0.14.3",
+    "source-map-support": "^0.5.19",
+    "ws": "^7.4.5"
   },
   "devDependencies": {
     "@ava/typescript": "^1.1.1",
     "@istanbuljs/nyc-config-typescript": "^1.0.1",
+    "@types/inquirer": "^7.3.1",
+    "@types/listr": "^0.14.3",
+    "@types/node": "^15.0.2",
+    "@types/ws": "^7.4.2",
     "@typescript-eslint/eslint-plugin": "^4.0.1",
     "@typescript-eslint/parser": "^4.0.1",
-    "ava": "^3.12.1",
+    "ava": "^3.15.0",
     "codecov": "^3.5.0",
     "cspell": "^4.1.0",
-    "cz-conventional-changelog": "^3.3.0",
+    "cz-conventional-changelog": "^3.0.1",
     "eslint": "^7.8.0",
     "eslint-config-prettier": "^6.11.0",
     "eslint-plugin-eslint-comments": "^3.2.0",
-    "eslint-plugin-import": "^2.22.0",
+    "eslint-plugin-import": "^2.2.0",
     "gh-pages": "^3.1.0",
-    "npm-run-all": "^4.1.5",
+    "npm-run-all": "^1.7.0",
     "nyc": "^15.1.0",
     "open-cli": "^6.0.1",
     "prettier": "^2.1.1",
     "standard-version": "^9.0.0",
     "ts-node": "^9.0.0",
-    "typedoc": "^0.19.0",
+    "typedoc": "^0.20.36",
     "typescript": "^4.0.2"
   },
   "files": [
