--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "express": "^4.17.1",
     "inquirer": "^8.0.0",
     "listr": "^0.14.3",
+    "on-change": "^3.0.2",
     "rxjs": "^6.6.7",
     "source-map-support": "^0.5.19",
     "term.js": "^0.0.7",
