--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "dotenv": "^9.0.0",
     "execution-time": "^1.4.1",
     "express": "^4.17.1",
+    "glob": "^7.1.7",
     "inquirer": "^8.0.0",
     "listr": "^0.14.3",
     "on-change": "^3.0.2",
@@ -51,6 +52,7 @@
     "@ava/typescript": "^1.1.1",
     "@istanbuljs/nyc-config-typescript": "^1.0.1",
     "@types/blessed": "^0.1.17",
+    "@types/glob": "^7.1.3",
     "@types/inquirer": "^7.3.1",
     "@types/listr": "^0.14.3",
     "@types/node": "^15.0.2",
