--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "express": "^4.17.1",
     "glob": "^7.1.7",
     "inquirer": "^8.0.0",
+    "json-beautify": "^1.1.1",
     "listr": "^0.14.3",
     "on-change": "^3.0.2",
     "rxjs": "^6.6.7",
